# Branch-Bound-Flowshop

./: CMakeLists.txt  README.md
include/: bnb.hpp  ivm.hpp  ivm_test.hpp  lower_bound.hpp  pfsp_instance.hpp  utils.hpp
src/: bnb.cpp  ivm.cpp  ivm_test.cpp  lower_bound.cpp  main.cpp  pfsp_instance.cpp  utils.cpp
